--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,17 @@
     <script src="js/main.js"></script>
   </head>
   <body>
+    <div id="templates">
+      <div class="touch-overlays">
+        <div class="touch-overlay multi-0" data-overlay="multi-0">
+
+        </div>
+      </div>
+    </div>
     <div id="stage">
-      <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
-      </svg>
+      <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
+      <div class="interaction">
+      </div>
     </div>
   </body>
 </html>
