Added lots of styles of touch overlay.

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,37 @@
   <body>
     <div id="templates">
       <div class="touch-overlays">
-        <div class="touch-overlay multi-0" data-overlay="multi-0">
-
+        <div class="touch-overlay multi multi-0" data-overlay="multi-0">
+          <div class="ring-1"></div>
+          <div class="ring-2"></div>
+          <div class="arcs-1 rotate-1"></div>
+        </div>
+        <div class="touch-overlay multi multi-1" data-overlay="multi-1">
+          <div class="fill-1"></div>
+          <div class="arcs-2 rotate-2"></div>
+        </div>
+        <div class="touch-overlay multi multi-2" data-overlay="multi-2">
+          <div class="ring-1"></div>
+          <div class="ring-2"></div>
+          <div class="crosshairs crosshairs-1 rotate-1">
+            <div class="line"></div>
+            <div class="line r90"></div>
+            <div class="line r45"></div>
+            <div class="line r135"></div>
+          </div>
+        </div>
+        <div class="touch-overlay multi multi-3" data-overlay="multi-3">
+          <div class="ring-1"></div>
+          <div class="fill-1"></div>
+          <div class="crosshairs crosshairs-2 rotate-3">
+            <div class="line r45"></div>
+            <div class="line r135"></div>
+          </div>
+        </div>
+        <div class="touch-overlay multi multi-4" data-overlay="multi-4">
+          <div class="ring-3"></div>
+          <div class="ring-1"></div>
+          <div class="fill-2"></div>
         </div>
       </div>
     </div>
