--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,12 @@
     </div>
     <div id="stage">
       <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
+      <div class="widget-centre">
+        <div class="widget clock">
+          <div class="text"></div>
+          <object class="lock" data="images/lock.svg" type="image/svg+xml"></object>
+        </div>
+      </div>
       <div class="interaction">
       </div>
     </div>
