Start of lock overlay

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,10 @@
           <div class="ring-1"></div>
           <div class="fill-2"></div>
         </div>
+        <div class="touch-overlay lock-finger" data-overlay="lock-finger">
+          <div class="circle"></div>
+          <div class="arcs-2 rotate-2"></div>
+        </div>
       </div>
     </div>
     <div id="stage">
@@ -51,6 +55,8 @@
         </div>
       </div>
       <div class="interaction">
+        <div class="lock-underlays"></div>
+        <div class="touch-overlays"></div>
       </div>
     </div>
   </body>
