Improved showing / hiding of lock dialog.

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,9 @@
           <div class="arcs-2 rotate-2"></div>
         </div>
       </div>
+      <div class="lock-dialog">
+        <div class="inner"></div>
+      </div>
     </div>
     <div id="stage">
       <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
