--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/lib/jquery-2.1.4.min.js"></script>
+    <script data-main="js/main" src="js/lib/require.js"></script>
   </head>
   <body>
     <div id="templates">
