Started designing combination lock

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,15 @@
           <div class="arcs-2 rotate-2"></div>
         </div>
       </div>
-      <div class="lock-dialog">
-        <div class="inner"></div>
+      <div class="combination-lock">
+        <div class="ring-1"></div>
+        <div class="all-segments">
+          <div class="segments segments-1">
+            <div class="segment">
+              <div class="inner"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div id="stage">
