Added first version of combination input (udlr)

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
             </div>
           </div>
         </div>
+        <div class="input ring-2"></div>
       </div>
     </div>
     <div id="stage">
