Added hex buttons + all interactivity

--- a/touch-dashboard/index.html
+++ b/touch-dashboard/index.html
@@ -58,7 +58,8 @@
       </div>
     </div>
     <div id="stage">
-      <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
+      <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+      </svg>
       <div class="widget-centre">
         <div class="widget clock">
           <div class="text"></div>
