Added icons to hex buttons.

--- a/touch-dashboard/index.html
+++ b/touch-dashboard/index.html
@@ -60,6 +60,7 @@
     <div id="stage">
       <svg class="hex-background" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
       </svg>
+      <div class="hex-overlays"></div>
       <div class="widget-centre">
         <div class="widget clock">
           <div class="text"></div>
