Added media info to lock screen.

--- a/touch-dashboard/index.html
+++ b/touch-dashboard/index.html
@@ -62,6 +62,14 @@
       </svg>
       <div class="hex-overlays"></div>
       <div class="widget-centre">
+        <div class="widget media-info">
+          <p class="media-status">
+            <span class="glyphicon"></span>
+          </p>
+          <p class="media-artist"></p>
+          <p class="media-title"></p>
+          <p class="media-album"></p>
+        </div>
         <div class="widget clock">
           <div class="text"></div>
           <object class="lock" data="images/lock.svg" type="image/svg+xml"></object>
