Introduced "center states" to switch + animate between core state widgets.

--- a/touch-dashboard/index.html
+++ b/touch-dashboard/index.html
@@ -62,7 +62,7 @@
       </svg>
       <div class="hex-overlays"></div>
       <div class="widget-centre">
-        <div class="widget media-info">
+        <div class="widget media-info hidden">
           <p class="media-status">
             <span class="glyphicon"></span>
           </p>
@@ -70,7 +70,7 @@
           <p class="media-title"></p>
           <p class="media-album"></p>
         </div>
-        <div class="widget clock">
+        <div class="widget clock hidden">
           <div class="text"></div>
           <object class="lock" data="images/lock.svg" type="image/svg+xml"></object>
         </div>
