--- a/synesthesia-composer/index.html
+++ b/synesthesia-composer/index.html
@@ -3,7 +3,8 @@
   <head>
     <!-- libraries -->
     <script src="bower_components/requirejs/require.js"></script>
-    <script src="scripts/js/all.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="scripts/all.js"></script>
     <script>
       require(['main'], function(main) {
         main.start();
@@ -11,6 +12,7 @@
     </script>
   </head>
   <body>
-
+    <input id="file_picker" type="file" />
+    <audio id="audio" controls />
   </body>
 </html>
